--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,3 +1,5 @@
+/* main page */
+
 * {
   border: 1px solid red;
 }
@@ -45,3 +47,12 @@ body {
   height: 30px;
   /* float: right; */
 }
+
+/* results page */
+ .headerResults {
+
+ }
+
+ .bottomBar {
+   
+ }
