--- a/server/public/main.css
+++ b/server/public/main.css
@@ -2,11 +2,12 @@
 
 @import url('https://fonts.googleapis.com/css?family=Monoton');
 
-* {
+/* * {
   border: 1px solid red;
-}
+} */
 body {
   margin: 0;
+  background : url("/background.jpg");
 }
 
 submit:before{
@@ -56,7 +57,6 @@ submit:before{
 /* ////////        HOME        //////// */
 .addPeople {
   height: 100%;
-  /* background-color: red; */
 }
 
 .header {
@@ -83,14 +83,35 @@ submit:before{
 
 .radioAdd {
   float: left;
+  margin-left: 27%;
 }
 .radioRemove {
   float: left;
   margin-left: 25%;
 }
 .dropDown {
-  margin: 2% 28%;
+  margin: 0% 3%;
   height: 30px;
+}
+
+.subBtn {
+  font-size: 1vw;
+  margin: 2% 40%;
+  padding: 20px 0;
+  border-radius: 50%;
+  transition : transform 3s;
+  width: 20%;
+  height: 40%;
+  background-color: green;
+  color : white;
+}
+.subBtn:hover{
+  transform : rotate(-10800deg) !important;
+}
+
+.nameIn {
+  width: 35%;
+  margin-right: 5%;
 }
 .input {
   margin: 2% 28%;
